--- a/scrub_hub_project/scrub_hub_frontend/templates/scrub_hub_frontend/index.html
+++ b/scrub_hub_project/scrub_hub_frontend/templates/scrub_hub_frontend/index.html
@@ -5,6 +5,14 @@
 	<!-- hot reload support -->
 	{% vite_hmr_client %}
 	{% vite_react_refresh %}
+	<!--
+		We use a Django template filter to get the context data.
+		The json_script filter creates a script tag with type="application/json".
+		The contents are a Python object from Django's render context (in this case, "data")
+		The ID of the script tag is "_DjangoData_", making it's contents accessible via document.getElementById.
+		There's a helper method in scrub_hub_vite/src/GetScriptData.ts
+	-->
+	{{ data|json_script:"_DjangoData_" }}
 </head>
 <body>
 	<div id="root"></div>
