--- a/scrub_hub_project/authenticate/templates/authenticate/index.html
+++ b/scrub_hub_project/authenticate/templates/authenticate/index.html
@@ -1,14 +1,23 @@
-<html>
+<!DOCTYPE html>
+{% load django_vite %}
     <head>
         <title>Homepage</title>
+        {% vite_hmr_client %}
+	    {% vite_react_refresh %}
+        <!--
+		We use a Django template filter to get the context data.
+		The json_script filter creates a script tag with type="application/json".
+		The contents are a Python object from Django's render context (in this case, "data")
+		The ID of the script tag is "_DjangoData_", making it's contents accessible via document.getElementById.
+		There's a helper method in scrub_hub_vite/src/GetScriptData.ts
+	-->
+	    {{ data|json_script:"_DjangoData_" }}
     </head>
     <body>
-        <h1>This is the homepage!</h1>
-    
-        <!-- Link to the registration page -->
-        <p><a href="{% url 'register' %}">Register</a></p>
-    
-        <!-- Link to the login page -->
-        <p><a href="{% url 'my-login' %}">Login</a></p>
+        <div id="root"></div>
+        <!-- Create a script tag to load file from Vite.
+             In debug mode, this resolves to a localhost:5173 URL and vite dev server should be running.
+             Otherwise, it will check Vite's manifest.json to find the file in Vite's build output.
+        -->
+        {% vite_asset 'src/main.tsx' %}
     </body>
-</html>
