Add conversations, and scripts to set up test data.

--- a/scrub_hub_project/scrub_hub_chat/templates/scrub_hub_chat/index.html
+++ b/scrub_hub_project/scrub_hub_chat/templates/scrub_hub_chat/index.html
@@ -4,7 +4,7 @@
 	<title>TEST</title>
 	{% vite_hmr_client %}
 	{% vite_react_refresh %}
-	{{ chatComponentProps|json_script:"_DjangoData_" }}
+	{{ conversationListComponentProps|json_script:"_DjangoData_" }}
 </head>
 <body>
 	<div id="root"></div>
