--- a/scrub_hub_project/scrub_hub_chat/templates/scrub_hub_chat/index.html
+++ b/scrub_hub_project/scrub_hub_chat/templates/scrub_hub_chat/index.html
@@ -8,5 +8,5 @@
 </head>
 <body>
 	<div id="root"></div>
-	{% vite_asset 'src/Pages/ChatPage.tsx' %}
+	{% vite_asset 'src/pages/ChatPage.tsx' %}
 </body>
