--- a/scrub_hub_project/authenticate/templates/authenticate/dashboard.html
+++ b/scrub_hub_project/authenticate/templates/authenticate/dashboard.html
@@ -11,7 +11,8 @@
 		The ID of the script tag is "_DjangoData_", making it's contents accessible via document.getElementById.
 		There's a helper method in scrub_hub_vite/src/GetScriptData.ts
 	-->
-	    {{ first_name|json_script:"_DjangoData_" }}
+	    {{ user_data|json_script:"_DjangoData_" }}
+        <!-- {{ last_name|json_script:"_DjangoData_" }} -->
     </head>
     <body>
         <div id="root"></div>
